fix: 再次尝试修改

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
 registry=https://registry.npmjs.org/
+
+# Force using the same architecture across environments
+node-linker=hoisted
+legacy-peer-deps=true
