--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^3.4.0",
+    "@tailwindcss/forms": "^0.5.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
